<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User Portal Login"
        android:textSize="14dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ticket Reservation System"
        android:textSize="24sp"
        android:layout_marginBottom="32dp"/>


    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email Address"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/loginPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone Number"
        android:inputType="phone" />

    <Button
        android:id="@+id/btnLoginSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="LOGIN" />

    <Button
        android:id="@+id/btnGoToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Here? Register"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

</LinearLayout>